tdf#135384: Prevent Writer hang on ToC operation

This partially revert the removal in
3d36ff1a1d94bcdb6facf12eec00a532b6640880 and actually use it.

Change-Id: I86a6d6ffc3b7178dcbe61c02f5360c7bcf8a1232