sw/source/core/crsr/crstrvl.cxx
@@ -375,7 +375,9 @@ void SwCursorShell::GotoTOXMarkBase()
         return;
     // Take the 1. and get the index type. Ask it for the actual index.
     const SwTOXType* pType = aMarks[0]->GetTOXType();
-    auto pContentFrame = pType->FindContentFrame(*GetDoc(), *GetLayout());
+    auto pContentFrame = pType->FindContentFrame(*GetDoc(), *GetLayout(), IsReadOnlyAvailable());
+    if(!pContentFrame)
+        return;
     SwCallLink aLk(*this); // watch Cursor-Moves
     SwCursorSaveState aSaveState(*m_pCurrentCursor);
     assert(pContentFrame->IsTextFrame());
